# JoystickLibrary

./: .gitignore  JoystickLibrary.sln  LICENSE  README.md
JoystickLibrary/: JoystickLibrary.csproj  JoystickQueryThread.cs  JoystickWrapper.cs
JoystickLibrary/Properties/: AssemblyInfo.cs
JoystickLibraryTest/: JoystickLibraryTest.csproj  Program.cs
JoystickLibraryTest/Properties/: AssemblyInfo.cs
cpp/: CMakeLists.txt
cpp/include/: Enumerator.hpp  Extreme3DProService.hpp  JoystickService.hpp  Types.hpp  Xbox360Service.hpp  joystick.h
cpp/sample/: CMakeLists.txt  ServiceTester.h  jstester.cpp
cpp/src/: CMakeLists.txt  JoystickService.cpp  joystick.cpp  joystick_linux.cpp  joystick_win32.cpp
cpp/src/linux/: Enumerator_linux.cpp  Extreme3DProService_linux.cpp  Xbox360Service_linux.cpp  joystick_linux.cpp
cpp/src/win32/: Enumerator_win32.cpp  Extreme3DProService_win32.cpp  Xbox360Service_win32.cpp  joystick_win32.cpp
csharp/: JoystickLibrary.sln
csharp/JoystickLibrary/: Extreme3DProService.cpp  JoystickLibrary.cpp  JoystickLibrary.h  JoystickLibrary.sln  JoystickLibrary.vcxproj  JoystickLibrary.vcxproj.filters  Xbox360Service.cpp
csharp/JoystickLibrary/JoystickLibrary/: AssemblyInfo.cpp  JoystickLibrary.cpp  JoystickLibrary.h  JoystickLibrary.vcxproj  JoystickLibrary.vcxproj.filters
csharp/JoystickLibraryNative/: JoystickLibraryNative.vcxproj  JoystickLibraryNative.vcxproj.filters
csharp/JoystickLibrarySharp/: Extreme3DProService.cpp  JoystickLibrary.hpp  JoystickLibrarySharp.vcxproj  JoystickLibrarySharp.vcxproj.filters  Xbox360Service.cpp
csharp/JoystickLibraryTester/: JoystickLibraryTester.csproj  JoystickTester.cs
csharp/Tester/: JoystickTester.cs  Tester.csproj
csharp/Tester/Properties/: AssemblyInfo.cs
